--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="travel finder web to search the best options to travel">
   <link rel="shortcut icon" href="/avion.png" type="image/x-icon">
   <link rel="stylesheet" href="styles.css">
   <title>Travellian</title>
