--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="travel finder web to search the best options to travel">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Rubik&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="/avion.png" type="image/x-icon">
   <link rel="stylesheet" href="/public/styles/styles.css">
   <title>Travellian</title>
