Addstructure in the body for the page principal (title, subtitle)

--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Rubik&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="/avion.png" type="image/x-icon">
-  <link rel="stylesheet" href="/public/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>Travellian</title>
 </head>
 
 <body>
-
+  <main>
+    <section>
+      <header>
+        <span class="header__title-introducction">Start your unforgettable journey with us.</span>
+        <span class="header__subtitle-introducction">The best travel for your jouney begins now</span>
+      </header>
+    </section>
+  </main>
 </body>
 
 </html>
