Modify svg add header and navigation in html and scss

--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,19 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Rubik&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/90fb290707.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/avion.png" type="image/x-icon">
-  <link rel="stylesheet" href="/public/styles/styles.css">
+  <link rel="stylesheet" href="/styles/styles.css">
   <title>Travellian</title>
 </head>
 
 <body>
-
+  <header class="header-container">
+    <nav class="header-container__navigation">
+      <img class="navigation__image" src="/img/Travellian.svg" alt="white logo travellian">
+      <i class="fa-solid fa-bars" style="color: #ffffff;"></i>
+    </nav>
+  </header>
 </body>
 
 </html>
