--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,18 @@
       <span class="header__subtitle-introduction">The best travel for your jouney begins now</span>
     </div>
   </section>
+  <section class="popular-destination">
+    <div>
+      <h2 class="section__title">Popular Destinations</h2>
+      <p class="section__text">Most popular destinations around the world, from historical places to natural wonders.
+      </p>
+    </div>
+    <ul class="section__articles">
+      <li>
+        <article class="section__card"></article>
+      </li>
+    </ul>
+  </section>
 </body>
 
 </html>
