Add card-monument style and modify popular-destination name

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       <span class="header__subtitle-introduction">The best travel for your jouney begins now</span>
     </div>
   </section>
-  <section class="popular-destination">
+  <section class="section section--popular-destination">
     <div>
       <h2 class="section__title">Popular Destinations</h2>
       <p class="section__text">Most popular destinations around the world, from historical places to natural wonders.
@@ -39,7 +39,9 @@
     </div>
     <ul class="section__articles">
       <li>
-        <article class="section__card"></article>
+        <article class="section__card">
+          <img src="img/imag01.jpg" alt="Berlin cathedral" width="288px" height="320px" class="card-monument">
+        </article>
       </li>
     </ul>
   </section>
