--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,26 @@
       <span class="header__title-introduction">Start your unforgettable journey with us.</span>
       <span class="header__subtitle-introduction">The best travel for your jouney begins now</span>
     </div>
+    <div class="content-block">
+      <form class="content-block__buy-now">
+        <fieldset class="buy-now__col01">
+          <label>Destination</label><input type="text">
+          <label>Person</label><input type="number">
+        </fieldset>
+        <fieldset class="buy-now__col02">
+          <label>Checkin</label><input type="date">
+          <label>Checkout</label><input type="date">
+        </fieldset>
+      </form>
+      <div class="button">
+        <a href="">Buy Now</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16" fill="none">
+          <path
+            d="M21.7071 8.7071C22.0976 8.31658 22.0976 7.68342 21.7071 7.29289L15.3431 0.928931C14.9526 0.538406 14.3195 0.538407 13.9289 0.928931C13.5384 1.31946 13.5384 1.95262 13.9289 2.34314L19.5858 8L13.9289 13.6569C13.5384 14.0474 13.5384 14.6805 13.9289 15.0711C14.3195 15.4616 14.9526 15.4616 15.3431 15.0711L21.7071 8.7071ZM8.74228e-08 9L21 9L21 7L-8.74228e-08 7L8.74228e-08 9Z"
+            fill="white" />
+        </svg>
+      </div>
+    </div>
   </section>
   <section class="popular-destination">
     <div>
