Add styles to content-block form and labels

--- a/public/index.html
+++ b/public/index.html
@@ -43,14 +43,14 @@
     </div>
     <div class="content-block">
       <form class="content-block__buy-now">
-        <fieldset class="buy-now__col01">
+        <div class="buy-now__col01">
           <label>Destination</label><input type="text">
           <label>Person</label><input type="number">
-        </fieldset>
-        <fieldset class="buy-now__col02">
+        </div>
+        <div class="buy-now__col02">
           <label>Checkin</label><input type="date">
           <label>Checkout</label><input type="date">
-        </fieldset>
+        </div>
       </form>
       <div class="button">
         <a href="">Buy Now</a>
