Createwbp, add margin in .header, .section. Quit padding in global ul li

--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,10 @@
     <ul class="section__articles">
       <li>
         <article class="section__card">
-          <img src="img/imag01.jpg" alt="Berlin cathedral" width="288px" height="320px" class="card-monument">
+          <picture>
+            <source srcset="img/imag01.webp" type="image/webp">
+            <img src="img/imag01.jpg" alt="Berlin cathedral" width="288" height="320" class="section__card-monument">
+          </picture>
         </article>
       </li>
     </ul>
