--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,23 @@
     </div>
     <div class="content-block">
       <form class="content-block__buy-now">
-        <div class="buy-now__col01">
-          <label>Destination</label><input type="text">
-          <label>Person</label><input type="number">
-        </div>
-        <div class="buy-now__col02">
-          <label>Checkin</label><input type="date">
-          <label>Checkout</label><input type="date">
+        <div class="buy-now__col">
+          <div class="col__col01">
+            <label>Destination</label>
+            <input type="text">
+          </div>
+          <div class="col__col01">
+            <label>Person</label>
+            <input type="number">
+          </div>
+          <div class="col__col01">
+            <label>Checkin</label>
+            <input type="date">
+          </div>
+          <div class="col__col01">
+            <label>Checkout</label>
+            <input type="date">
+          </div>
         </div>
       </form>
       <div class="button">
