Add section__item class and align image from the classes

--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
       </p>
     </div>
     <ul class="section__articles">
-      <li>
+      <li class="section__item">
         <article class="section__card">
           <picture>
             <source srcset="img/imag01.webp" type="image/webp">
