Modify the background size and position in responsive

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         </svg>
         <div class="navigation__responsive-login">
           <a href="login">Login</a>
-          <a href="signup">Sign up</a>
+          <a class="button responsive-login__button-solid--signup" href="signup">Sign up</a>
         </div>
       </nav>
     </header>
