Add card-monument__title-wrapper classes for the titles image

--- a/public/index.html
+++ b/public/index.html
@@ -84,11 +84,17 @@
     </div>
     <ul class="section__articles">
       <li class="section__item">
-        <article class="section__card">
+        <article class="section__card card-monument">
           <picture>
             <source srcset="img/imag01.webp" type="image/webp">
-            <img src="img/imag01.jpg" alt="Berlin cathedral" width="288" height="320" class="section__card-monument">
+            <img src="img/imag01.jpg" alt="Berlin cathedral" width="288" height="320" class="card-monument__image">
           </picture>
+          <div class="card-monument__title-wrapper">  
+            <h3 class="card-monument__title">Monument of Berlin</h3>
+            <img src="img/location.svg" alt="Location logo" class="card-monument__location-logo">
+            <span class="card-monument__location">
+              Berlin, Germany</span>
+          </div>
         </article>
       </li>
     </ul>
