Add incon previous.svg from the icon buttons

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,10 @@
               Berlin, Germany</span>
           </div>
         </article>
+        <div class="">
+          <button class="icon-button icon-button--next"></button>
+          <button class="icon-button icon-button--previous"></button>
+        </div> 
       </li>
     </ul>
   </section>
