Create icon-button-wrapper, icon-button--next and --previous classes

--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
               Berlin, Germany</span>
           </div>
         </article>
-        <div class="">
+        <div class="icon-button-wrapper">
           <button class="icon-button icon-button--next"></button>
           <button class="icon-button icon-button--previous"></button>
         </div> 
