Add section special offer to index.html and title styles

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
             <source srcset="img/imag01.webp" type="image/webp">
             <img src="img/imag01.jpg" alt="Berlin cathedral" width="288" height="320" class="card-monument__image">
           </picture>
-          <div class="card-monument__title-wrapper">  
+          <div class="card-monument__title-wrapper">
             <h3 class="card-monument__title">Monument of Berlin</h3>
             <img src="img/location.svg" alt="Location logo" class="card-monument__location-logo">
             <span class="card-monument__location">
@@ -98,6 +98,17 @@
         </article>
       </li>
     </ul>
+  </section>
+  <section class="section section-special-offer">
+    <div>
+      <div>
+        <h2 class="section__title">Special Offer</h2>
+      </div>
+      <div>
+        <p class="section__text">Check out our special offer and discounts
+        </p>
+      </div>
+    </div>
   </section>
 </body>
 
