Modifay icon buttons, button global styles, html structure

--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,13 @@
           </div>
         </article>
         <div class="icon-button-wrapper">
-          <button class="icon-button icon-button--next"></button>
-          <button class="icon-button icon-button--previous"></button>
+          <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+            </button>
+          <button class="icon-button icon-button--next"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M1 21L11 11L0.999999 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg></button>
         </div> 
       </li>
     </ul>
