Add container image and article content in html

--- a/public/index.html
+++ b/public/index.html
@@ -109,6 +109,26 @@
         </p>
       </div>
     </div>
+    <article class="section-special-offer__image-container">
+      <img src="img/Image02specialoffer.png" alt="Town with cathedral in the background at dawn">
+    </article>
+    <section class="section-special-offer__text-block">
+      <article class="text-block__title">
+        <span>Lisbon,Portugal</span>
+        <img src="img/star.svg" alt="Yellow star rating">
+        <img src="img/star.svg" alt="Yellow star rating">
+        <img src="img/star.svg" alt="Yellow star rating">
+        <img src="img/star.svg" alt="Yellow star rating">
+        <img src="img/star.svg" alt="Yellow star rating">
+      </article>
+      <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance. Passage
+        and going through the cites of the world in classical literature.</p>
+      <div class="text-block__price">
+        <span>From</span>
+        <span>€500</span>
+        <a href="details">details</a>
+      </div>
+    </section>
   </section>
 </body>
 
