--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,29 @@
               Berlin, Germany</span>
           </div>
         </article>
+        <article class="section__card card-monument">
+          <picture>
+            <source srcset="img/imag02.webp" type="image/webp">
+            <img src="img/imag02.jpg" alt="Berlin cathedral" width="288" height="320" class="card-monument__image">
+          </picture>
+          <div class="card-monument__title-wrapper">  
+            <h3 class="card-monument__title">Millennium Bridge</h3>
+            <img src="img/location.svg" alt="Location logo" class="card-monument__location-logo">
+            <span class="card-monument__location">
+              London, United Kingdom</span>
+          </div>
+        </article>   <article class="section__card card-monument">
+          <picture>
+            <source srcset="img/imag03.webp" type="image/webp">
+            <img src="img/imag03.jpg" alt="Berlin cathedral" width="288" height="320" class="card-monument__image">
+          </picture>
+          <div class="card-monument__title-wrapper">  
+            <h3 class="card-monument__title">Rialto Bridge</h3>
+            <img src="img/location.svg" alt="Location logo" class="card-monument__location-logo">
+            <span class="card-monument__location">
+              Venice, Italy</span>
+          </div>
+        </article>
         <div class="icon-button-wrapper">
           <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
