Update style in text block

--- a/public/index.html
+++ b/public/index.html
@@ -115,17 +115,22 @@
     <section class="section-special-offer__text-block">
       <article class="text-block__title">
         <span>Lisbon,Portugal</span>
-        <img src="img/star.svg" alt="Yellow star rating">
-        <img src="img/star.svg" alt="Yellow star rating">
-        <img src="img/star.svg" alt="Yellow star rating">
-        <img src="img/star.svg" alt="Yellow star rating">
-        <img src="img/star.svg" alt="Yellow star rating">
+        <div class="title__stars">
+          <img src="img/star.svg" alt="Yellow star rating">
+          <img src="img/star.svg" alt="Yellow star rating">
+          <img src="img/star.svg" alt="Yellow star rating">
+          <img src="img/star.svg" alt="Yellow star rating">
+          <img src="img/star.svg" alt="Yellow star rating">
+        </div>
       </article>
-      <p>5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular during the renaissance. Passage
+      <p class="text-block__description">5 nights and 4 days in 5 star hotel, breakfast and lunch included. Very popular
+        during the renaissance. Passage
         and going through the cites of the world in classical literature.</p>
       <div class="text-block__price">
-        <span>From</span>
-        <span>€500</span>
+        <div class="price__details">
+          <span>From</span>
+          <span class="details__cost">€500</span>
+        </div>
         <a href="details">details</a>
       </div>
     </section>
