--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,8 @@
               Berlin, Germany</span>
           </div>
         </article>
+        </li>
+         <li>
         <article class="section__card card-monument">
           <picture>
             <source srcset="img/imag02.webp" type="image/webp">
@@ -107,7 +109,10 @@
             <span class="card-monument__location">
               London, United Kingdom</span>
           </div>
-        </article>   <article class="section__card card-monument">
+        </article>
+        </li>
+        <li>
+        <article class="section__card card-monument">
           <picture>
             <source srcset="img/imag03.webp" type="image/webp">
             <img src="img/imag03.jpg" alt="Berlin cathedral" width="288" height="320" class="card-monument__image">
@@ -119,6 +124,7 @@
               Venice, Italy</span>
           </div>
         </article>
+      </li>
         <div class="icon-button-wrapper">
           <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -128,8 +134,6 @@
             <path d="M1 21L11 11L0.999999 1" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg></button>
         </div> 
-      </li>
-    </ul>
   </section>
   <section class="section section-special-offer">
     <div>
