Create buttons big button buynow and small solid button

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
         </svg>
         <div class="navigation__responsive-login">
           <a href="login">Login</a>
-          <a class="button responsive-login__button-solid--signup" href="signup">Sign up</a>
+          <a class="button__button--solid" href="signup">Sign up</a>
         </div>
       </nav>
     </header>
@@ -66,7 +66,7 @@
           </div>
         </div>
       </form>
-      <div class="button">
+      <div class="button button__button-buynow">
         <a href="buy">Buy Now</a>
         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16" fill="none">
           <path
@@ -126,22 +126,23 @@
         </article>
       </li>
     </ul>
-      <div class="icon-button-wrapper">
-        <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-        <div class="icon-button-wrapper">
-          <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg>
-          </button>
-          <button class="icon-button icon-button--next"><svg width="12" height="22" viewBox="0 0 12 22" fill="none"
-              xmlns="http://www.w3.org/2000/svg">
-              <path d="M1 21L11 11L0.999999 1" stroke="white" stroke-width="2" stroke-linecap="round"
-                stroke-linejoin="round" />
-            </svg></button>
-        </div> 
+    <div class="icon-button-wrapper">
+      <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22" fill="none"
+          xmlns="http://www.w3.org/2000/svg">
+          <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+          <div class="icon-button-wrapper">
+            <button class="icon-button icon-button--previous"><svg width="12" height="22" viewBox="0 0 12 22"
+                fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M11 1L1 11L11 21" stroke="white" stroke-width="2" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg>
+            </button>
+            <button class="icon-button icon-button--next"><svg width="12" height="22" viewBox="0 0 12 22" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 21L11 11L0.999999 1" stroke="white" stroke-width="2" stroke-linecap="round"
+                  stroke-linejoin="round" />
+              </svg></button>
+          </div>
   </section>
   <section class="section section-special-offer">
     <div>
@@ -182,7 +183,7 @@
           <span>From</span>
           <span class="details__cost">€500</span>
         </div>
-        <a href="details">details</a>
+        <a class="button__button--solid" href="details">details</a>
       </div>
     </section>
     <div class="icon-button-wrapper">
