Add image01 in the section and add the blog titles

--- a/public/index.html
+++ b/public/index.html
@@ -199,6 +199,17 @@
         </svg></button>
     </div>
   </section>
+  <section class="section section-blog">
+    <div>
+      <div>
+        <h2 class="section__title">Our Blog</h2>
+      </div>
+      <div class="section__text">
+        <p class="section__text">An insight the incredible experience in the world
+        </p>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
