Update the blog section adding text, containers and anchor

--- a/public/index.html
+++ b/public/index.html
@@ -209,6 +209,40 @@
         </p>
       </div>
     </div>
+    <article class="section content">
+      <div class="content__image-container">
+        <img class="image-container__image" src="img/Image01-section-blog.png" alt="imagen computer">
+      </div>
+      <article class="content__text-block">
+        <div class="text-block__heading">
+          <h2>Beautiful Italy Let's travel</h2>
+        </div>
+        <div class="text-block__text-blog">
+          <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and
+            I
+            will give
+            you a complete account of the system and expound the actual teachings of the great explorer of the truth,
+            the
+            master-
+            builder of human happiness. No one rejects, dislike, or avoids plasure itself, because it is pleasure, but
+            because those
+            who do not know how to pursue pleasure rationally encounter consequences that are extremly painful. Nor
+            again
+            is there
+            anyone who loves or pursues.</p>
+        </div>
+      </article>
+      <div>
+        <a href="read more">Read More</a>
+      </div>
+      <div>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16" fill="none">
+          <path
+            d="M21.7071 8.7071C22.0976 8.31658 22.0976 7.68342 21.7071 7.29289L15.3431 0.928931C14.9526 0.538406 14.3195 0.538407 13.9289 0.928931C13.5384 1.31946 13.5384 1.95262 13.9289 2.34314L19.5858 8L13.9289 13.6569C13.5384 14.0474 13.5384 14.6805 13.9289 15.0711C14.3195 15.4616 14.9526 15.4616 15.3431 15.0711L21.7071 8.7071ZM8.74228e-08 9L21 9L21 7L-8.74228e-08 7L8.74228e-08 9Z"
+            fill="#ff7757" />
+        </svg>
+      </div>
+    </article>
   </section>
 </body>
 
