Update the blog section in responsive

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
           <li><a href="blog">Blog</a></li>
           <li><a href="pricing">Pricing</a></li>
         </ul>
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
+        <svg class="navigation__burguer" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50"
+          fill="none">
           <path
             d="M7.29167 14.5833C6.71637 14.5833 6.25 14.117 6.25 13.5417C6.25 12.9664 6.71637 12.5 7.29167 12.5H42.7083C43.2835 12.5 43.75 12.9664 43.75 13.5417C43.75 14.117 43.2835 14.5833 42.7083 14.5833H7.29167ZM7.29167 25C6.71637 25 6.25 24.5335 6.25 23.9583C6.25 23.3831 6.71637 22.9167 7.29167 22.9167H42.7083C43.2835 22.9167 43.75 23.3831 43.75 23.9583C43.75 24.5335 43.2835 25 42.7083 25H7.29167ZM7.29167 35.4167C6.71637 35.4167 6.25 34.9502 6.25 34.375C6.25 33.7998 6.71637 33.3333 7.29167 33.3333H42.7083C43.2835 33.3333 43.75 33.7998 43.75 34.375C43.75 34.9502 43.2835 35.4167 42.7083 35.4167H7.29167Z"
             fill="white" />
@@ -231,18 +232,18 @@
             is there
             anyone who loves or pursues.</p>
         </div>
-      </article>
-      <div class="content__readmore">
-        <div>
-          <a class="readmore__anchor" href="read more">Read More</a>
+        <div class="content__readmore">
+          <div>
+            <a class="readmore__anchor" href="read more">Read More</a>
+          </div>
+          <svg class="anchor__arrow" xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16"
+            fill="none">
+            <path
+              d="M21.7071 8.7071C22.0976 8.31658 22.0976 7.68342 21.7071 7.29289L15.3431 0.928931C14.9526 0.538406 14.3195 0.538407 13.9289 0.928931C13.5384 1.31946 13.5384 1.95262 13.9289 2.34314L19.5858 8L13.9289 13.6569C13.5384 14.0474 13.5384 14.6805 13.9289 15.0711C14.3195 15.4616 14.9526 15.4616 15.3431 15.0711L21.7071 8.7071ZM8.74228e-08 9L21 9L21 7L-8.74228e-08 7L8.74228e-08 9Z"
+              fill="#ff7757" />
+          </svg>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="16" viewBox="0 0 22 16" fill="none">
-          <path
-            d="M21.7071 8.7071C22.0976 8.31658 22.0976 7.68342 21.7071 7.29289L15.3431 0.928931C14.9526 0.538406 14.3195 0.538407 13.9289 0.928931C13.5384 1.31946 13.5384 1.95262 13.9289 2.34314L19.5858 8L13.9289 13.6569C13.5384 14.0474 13.5384 14.6805 13.9289 15.0711C14.3195 15.4616 14.9526 15.4616 15.3431 15.0711L21.7071 8.7071ZM8.74228e-08 9L21 9L21 7L-8.74228e-08 7L8.74228e-08 9Z"
-            fill="#ff7757" />
-        </svg>
-      </div>
-
+      </article>
     </article>
   </section>
 </body>
